# crazyflow

./: .gitignore  .gitmodules  README.md  mkdocs.yml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  devcontainer.linux.json  devcontainer.wsl2.json
.github/: CODEOWNERS
.github/workflows/: docs.yml  testing.yml
benchmark/: compile.py  main.py  op_count.py  performance.py  plot.py
crazyflow/: __init__.py  constants.py  exception.py  utils.py
crazyflow/control/: control.py  controller.py  mellinger.py  onboard_controller.py
crazyflow/crazyflow_env/: __init__.py
crazyflow/crazyflow_env/envs/: __init__.py  crazyflow.py
crazyflow/crazyflow_env/wrappers/: __init__.py
crazyflow/envs/: drone_env.py  figure_8_env.py  landing_env.py  reach_pos_env.py  reach_vel_env.py
crazyflow/gymnasium_envs/: __init__.py  crazyflow.py
crazyflow/models/cf2/: assets.xml  cf2.xml  scene.xml
crazyflow/randomize/: __init__.py  randomize.py
crazyflow/sim/: __init__.py  core.py  data.py  domain_randomizer.py  functional.py  fused.py  integration.py  physics.py  sensors.py  sim.py  structs.py  symbolic.py  visualize.py
docs/: examples.md  index.md  installation.md  mkdocs.yml
docs/stylesheets/: extra.css
examples/: attitude.py  cache.py  cameras.py  change_pos.py  contacts.py  crash.py  disturbance.py  domain_randomization.py  figure8.py  fly_spiral.py  force_torque.py  gradient.py  gymnasium_env.py  gymnasium_env_RL.py  gymnasium_env_trajectory.py  hover.py  integrate_main.py  integrate_v2.py  led_deck.py  randomize.py  randomize_inertia.py  randomize_mass.py  raycasting.py  render.py  spiral.py  symbolic.py  symbolic_model.py  thrust.py
scripts/: setup-mounts.sh
tests/: conftest.py
tests/integration/: test_disturbance.py  test_envs.py  test_examples.py  test_gymnasium_envs.py  test_interfaces.py  test_models.py  test_randomize.py  test_reset.py  test_sim.py  test_symbolic.py
tests/unit/: test_disturbance.py  test_functional.py  test_gradients.py  test_randomize.py  test_render.py  test_sensors.py  test_sim.py  test_symbolic.py  test_utils.py  test_visualizations.py
tutorials/: LQR_ILQR.ipynb  compare_sim_and_symbolic.ipynb
