[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crazyflow"
dynamic = ["version"]
description = "Fast, parallelizable simulations of Crazyflies with JAX and MuJoCo."
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
]

dependencies = [
    "jax>=0.5.0,!=0.5.3,!=0.6.0", # 0.5.3 and 0.6.0 have a bug that causes resets to not work properly. This is related to the fusing of SimData.mjx_model into the _reset function.
    "mujoco>=3.3.0",
    "mujoco-mjx>=3.3.0",
    "gymnasium",
    "imageio",
    "einops",
    "flax",
    "ml_collections",
    "casadi",
    "numpy",
]
requires-python = ">=3.10"

[project.optional-dependencies]
test = ["pytest>=8.0.0", "pytest-cov", "pytest-timeout"]
gpu = ["jax[cuda12]"]
benchmark = ["fire"]

[project.urls]
Homepage = "https://github.com/utiasDSL/crazyflow"
Repository = "https://github.com/utiasDSL/crazyflow"

[tool.setuptools.packages]
find = {}

[tool.setuptools.dynamic]
version = { attr = "crazyflow.__version__" }

[tool.setuptools.package-data]
crazyflow = ["models/cf2/*.xml", "models/cf2/assets/*.obj"]

[tool.pytest.ini_options]
markers = ["unit", "integration", "render"]
addopts = "-m 'not render'"

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".git",
    ".git-rewrite",
    ".ipynb_checkpoints",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "build",
    "dist",
    "site-packages",
    "venv",
    "docs/conf.py",
]

line-length = 100
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "D", "TCH", "ANN"]
ignore = ["ANN401", "ANN101"]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
"benchmark/*" = ["D100", "D103"]
"tests/*" = ["D100", "D103", "D104"]
"examples/*" = ["D100", "D103"]
"tutorials/*" = ["D", "ANN"]
# TODO: Remove once everything is stable and document
"crazyflow/*" = ["D100", "D101", "D102", "D104", "D107"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-annotations]
suppress-dummy-args = true
suppress-none-returning = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = true
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"
